# banking

./: .gitignore  CLAUDE.md  COMMENTS.md  README.md  REQUIREMENTS.md  SPECIFICATION.md  account.csv  bas2023.csv  pyproject.toml
bokforing/: __init__.py  __main__.py  cli.py  models.py
bookkeeping/: __init__.py  __main__.py  categorizer.py  cli.py  config.py  csv_parser.py  dedup.py  gnucash_writer.py  gtk_app.py  journal.py  models.py  reports.py  rules_db.py  vat.py
bookkeeping/templates/: base.html  grundbok.html  huvudbok.html  momsdeklaration.html  ne_bilaga.html
openspec/changes/categorization-engine/: design.md  proposal.md  tasks.md
openspec/changes/cli-config-and-polish/: design.md  proposal.md  tasks.md
openspec/changes/csv-parser/: design.md  proposal.md  tasks.md
openspec/changes/duplicate-detector/: design.md  proposal.md  tasks.md
openspec/changes/gnucash-writer/: design.md  proposal.md  tasks.md
openspec/changes/gtk4-verification-gui/: design.md  proposal.md  tasks.md
openspec/changes/pdf-report-generation/: design.md  proposal.md  tasks.md
openspec/changes/project-scaffolding-and-data-models/: design.md  proposal.md  tasks.md
openspec/changes/rules-database/: design.md  proposal.md  tasks.md
personas/: PYTHON_DEVELOPER.md
tests/: conftest.py  test_bugfixes_enhancements.py  test_categorizer.py  test_cli_integration.py  test_config.py  test_csv_parser.py  test_dedup.py  test_gnucash_writer.py  test_gtk_app.py  test_models.py  test_reports.py  test_rules_db.py  test_vat.py
tests/fixtures/: sample_bank.csv  sample_bank_bom.csv
(+22 files in other folders)
